--- a/src/scss/board.scss
+++ b/src/scss/board.scss
@@ -4,67 +4,154 @@
   width: 100%;
   resize: none;
   outline: none;
-  background-color: $bg-color-light;
+  background-color: $eggshell;
   border: none;
   font-size: $f-size;
   padding: $pd-y $pd-x;
   transition: background-color $transition-time, filter $transition-time;
 }
 
-.stck-brd {
-  width: 100%;
+.stck-brd-body {
+  height: 100%;
   position: relative;
 
-  .n-note {
-    max-width: 50px;
-    width: 20%;
+  .tinymce-placeholder {
+    display: none;
+  }
 
-    img {
-      width: 100%;
+  .tox.tox-tinymce {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    min-width: 200px;
+    min-height: 350px;
+    max-width: 90vw;
+    max-height: 80vh;
+    resize: both;
+    z-index: 500;
+
+    .tox-statusbar__resize-handle {
+      display: none;
+    }
+
+    .tox-statusbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .tox-statusbar__branding {
+      .tinymce-action-buttons {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 10px;
+        padding-right: 5px;
+
+        .tinymce-action-button {
+          background-color: $forest-green-crayola;
+          padding: 2px 10px;
+          border-radius: 10px;
+          transition: color $transition-time, background-color $transition-time;
+
+          &:hover {
+            color: $eggshell;
+          }
+
+          &:active {
+            background-color: darken($forest-green-crayola, 10%);
+          }
+        }
+
+        .tinymce-action-button-close {
+          background-color: $brick-red;
+
+          &:active {
+            background-color: darken($brick-red, 10%);
+          }
+        }
+      }
+    }
+  }
+}
+
+.stck-brd {
+  width: 100%;
+  min-height: 100%;
+  position: relative;
+  overflow: hidden;
+
+  .n-note {
+    width: fit-content;
+    border-radius: 10px;
+    padding: 3px 20px;
+    background-color: $forest-green-crayola;
+    color: #cecece;
+    margin-left: 10px;
+    margin-top: 10px;
+    transition: color $transition-time;
+    cursor: default;
+
+    &:hover {
+      color: #fff;
     }
   }
 
   .note {
     background-color: transparent;
-    max-width: 500px;
-    max-height: 400px;
+    max-width: 90vw;
+    max-height: 80vh;
     min-height: 150px;
     min-width: 100px;
     width: 30%;
     height: 200px;
     resize: both;
-    overflow: auto;
     position: absolute;
     left: 50px;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    overflow: hidden;
 
     .note-bar {
       top: 0;
       left: 0;
       width: 100%;
-      height: 20px;
-      background-color: $primary-color;
+      background-color: $cool-grey;
       display: flex;
-      justify-content: flex-end;
       align-items: center;
+      padding: 5px 10px;
       transition: background-color 0.5s;
 
       &:active {
-        cursor: move;
         user-select: none;
-        background-color: darken($primary-color, 10%);
 
-        & ~ textarea {
-          background-color: transparentize($bg-color-light, 0.7);
+        & ~ div {
           filter: blur(1px);
         }
       }
 
       .note-bar-delete {
-        display: block;
         width: 15px;
-        cursor: pointer;
+        height: 15px;
+        background-color: $brick-red;
+        border-radius: 50%;
+        display: grid;
+        place-items: center;
+
+        .note-bar-delete-icon {
+          width: 50%;
+          filter: opacity(50%);
+          display: none;
+        }
+
+        &:hover {
+          .note-bar-delete-icon {
+            display: block;
+          }
+        }
       }
     }
 
@@ -73,14 +160,15 @@
       height: 1.7rem;
     }
 
-    hr {
+    .note-separator {
       border: none;
-      height: 1px;
-      background-color: lighten($primary-color, 20%);
+      height: 0;
+      background-color: transparent;
     }
 
     .note-content {
       @include note-textarea(1rem, 0.3rem, 0.1rem);
+      word-break: break-all;
       flex-grow: 1;
     }
   }
