Besides note content, remember note position

--- a/src/scss/board.scss
+++ b/src/scss/board.scss
@@ -130,6 +130,7 @@
     flex-direction: column;
     border-radius: 10px;
     overflow: hidden;
+    border: 1px solid $independence;
 
     .note-bar {
       top: 0;
