--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,38 @@
 @import "config";
 
-div {
-  background-color: red;
-  width: 100px;
-  aspect-ratio: 1;
+.stck-body {
+  height: 100%;
+
+  .stck-body-wrapper {
+    min-height: 100%;
+    display: grid;
+    place-items: center;
+
+    .board-name-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+
+      input {
+        padding: 5px 15px;
+        font-size: 1.5em;
+        border-radius: 0.5em;
+        border: none;
+        background-color: $eggshell;
+        outline: none;
+        text-align: center;
+      }
+
+      button {
+        width: 100%;
+        padding: 5px;
+        font-size: 1.2em;
+        border-radius: 0.5em;
+        border: none;
+        background-color: $forest-green-crayola;
+        color: #fff;
+      }
+    }
+  }
 }
